Stop scrolling
I'm going to change it to adapt to width, but that can cause a bit of blank space off-screen, so this keeps it from scrolling

--- a/page.css
+++ b/page.css
@@ -16,3 +16,6 @@ canvas {
   margin: 0 auto;
   background-color: #666;
 }
+* {
+  overflow: hidden;
+}
